--- a/home.html
+++ b/home.html
@@ -97,11 +97,11 @@
     </main>
 
     <footer>
-        <div class="footer">
-            <div class="footer1">
-                <h2>CONTACT US</h2>
-                <p>Plot No. 1, Block No. 1, <br> Mtoni Kijichi, Temeke, Dar es Salaam, <br> Tanzania</p>
-                <p>Phone: +255 713 000 000 <br> Email:
+        <div class="footer1">
+            <h2>CONTACT US</h2>
+            <p>Plot No. 1, Block No. 1, <br> Mtoni Kijichi, Temeke, Dar es Salaam, <br> Tanzania</p>
+            <p>Phone: +255 713 000 000 <br> Email:
+        </div>
     </footer>
 
 </body>
