--- a/home.html
+++ b/home.html
@@ -57,27 +57,36 @@
 
         <section id="ourprojects">
             <h2>Our Projects</h2>
-            <figure>
-                <img src="./images/Projects/pr1.jpg" alt="">
-                <figcaption>Construction of Simple Residential House at Mtoni Kijichi in Temeke
-                    Municipality- Dar es Salaam-for Miss. Juliana Moka</figcaption>
-            </figure>
+            <div class="card">
+                <img src="./images/Projects/pr1.jpg" alt="" class="card-image">
+                <div class="card-description">
+                    <h3 class="text-title">Construction of Simple Residential House</h3>
+                <p class="text-body">Construction of Simple Residential House at Mtoni Kijichi in Temeke
+                    Municipality- Dar es Salaam-for Miss. Juliana Moka</p>
+                </div>
+            </div>
 
-            <figure>
-                <img src="./images/Projects/pr2.jpg" alt="">
-                <figcaption>Construction of Affordable Housing Scheme Phase III at Mtoni Kijichi in Temeke
+            <div class="card">
+                <img src="./images/Projects/pr2.jpg" alt="" class="card-image">
+                <div class="card-description">
+                    <h3 class="text-title">Construction of Affordable Housing</h3>
+                <p class="text-body">Construction of Affordable Housing Scheme Phase III at Mtoni Kijichi in Temeke
                     Municipality-Lot 11 - Dar es Salaam-Sub-contracted landscaping+ paint and decoration. Contract Price
-                    TZS. 218Million</figcaption>
-            </figure>
-            <figure>
-                <img src="./images/Projects/pr3.png" alt="">
-                <figcaption>Periodic Maintance - WAILES ROAD, which is situated in Lindi Municipal Council. Double
-                    Surface dressing It covers 2Km as a whole. Tzs 350Million</figcaption>
-            </figure>
+                    TZS. 218Million</p>
+                    </div>
+                </div>
+            <div class="card">
+                <img src="./images/Projects/pr3.png" alt="" class="card-image">
+                <div class="card-description">
+                <h3 class="text-title">Periodic Maintance - WAILES ROAD</h3>
+                <p class="text-body">Periodic Maintance - WAILES ROAD, which is situated in Lindi Municipal Council. Double
+                    Surface dressing It covers 2Km as a whole. Tzs 350Million</p>
+                </div>
+                </div>
 
 
         </section>
-        <article>
+        <article class="vm">
             <h2>Our Vision</h2>
 
             <p>To be a world-class infrastructure construction and Real Estate Development company committed to total
@@ -86,7 +95,7 @@
                 the highest standards of workmanship.</p>
         </article>
 
-        <article>
+        <article class="vm">
             <h2>Our Mission</h2>
 
             <p>Metz Engineering Company Limited is a leader in providing value-added construction services to our
@@ -100,7 +109,7 @@
         <div>
             <h2>CONTACT US</h2>
             <p>Plot No. 1, Block No. 1, <br> Mtoni Kijichi, Temeke, Dar es Salaam, <br> Tanzania</p>
-            <p>Phone: +255 713 000 000 <br> Email:
+            <p>Phone: +255 713 000 000 <br> Email: metz_engineering@yahoo.com
         </div>
     </footer>
 
