formated the document

--- a/home.html
+++ b/home.html
@@ -28,6 +28,7 @@
     </header>
 
     <main>
+
         <banner>
             <section>
                 <img src="./images/eze profile-1.png" alt="">
@@ -40,6 +41,7 @@
 
         <article>
             <h2>General Information</h2>
+
             <p>METz ENGINEERING CO. LIMITED was established in 2017 and registered in 2019 as a limited company. This is
                 a privately owned Tanzanian Company It was established to operate in Tanzania with various activities as
                 registered in the memorandum and articles of associations.</p>
@@ -52,7 +54,6 @@
                 as a Building Works and Civil Works Contractor Class SIX. METz ENGINEERING CO. LIMITED operates under
                 the laws and regulations of Tanzania and will always follow any associated territorial regulations in
                 public activities.</p>
-
         </article>
 
         <section id="ourprojects">
@@ -61,8 +62,8 @@
                 <img src="./images/Projects/pr1.jpg" alt="" class="card-image">
                 <div class="card-description">
                     <h3 class="text-title">Construction of Simple Residential House</h3>
-                <p class="text-body">Construction of Simple Residential House at Mtoni Kijichi in Temeke
-                    Municipality- Dar es Salaam-for Miss. Juliana Moka</p>
+                    <p class="text-body">Construction of Simple Residential House at Mtoni Kijichi in Temeke
+                        Municipality- Dar es Salaam-for Miss. Juliana Moka</p>
                 </div>
             </div>
 
@@ -70,20 +71,21 @@
                 <img src="./images/Projects/pr2.jpg" alt="" class="card-image">
                 <div class="card-description">
                     <h3 class="text-title">Construction of Affordable Housing</h3>
-                <p class="text-body">Construction of Affordable Housing Scheme Phase III at Mtoni Kijichi in Temeke
-                    Municipality-Lot 11 - Dar es Salaam-Sub-contracted landscaping+ paint and decoration. Contract Price
-                    TZS. 218Million</p>
-                    </div>
+                    <p class="text-body">Construction of Affordable Housing Scheme Phase III at Mtoni Kijichi in Temeke
+                        Municipality-Lot 11 - Dar es Salaam-Sub-contracted landscaping+ paint and decoration. Contract
+                        Price
+                        TZS. 218Million</p>
                 </div>
+            </div>
             <div class="card">
                 <img src="./images/Projects/pr3.png" alt="" class="card-image">
                 <div class="card-description">
-                <h3 class="text-title">Periodic Maintance - WAILES ROAD</h3>
-                <p class="text-body">Periodic Maintance - WAILES ROAD, which is situated in Lindi Municipal Council. Double
-                    Surface dressing It covers 2Km as a whole. Tzs 350Million</p>
+                    <h3 class="text-title">Periodic Maintance - WAILES ROAD</h3>
+                    <p class="text-body">Periodic Maintance - WAILES ROAD, which is situated in Lindi Municipal Council.
+                        Double
+                        Surface dressing It covers 2Km as a whole. Tzs 350Million</p>
                 </div>
-                </div>
-
+            </div>
 
         </section>
         <article class="vm">
