--- a/home.html
+++ b/home.html
@@ -30,13 +30,16 @@
     <main>
 
         <banner>
-            <section>
-                <img src="./images/eze profile-1.png" alt="">
-                <h1>METZ ENGINEERING <br> CO.LIMITED</h1>
-                <h2>Building & Civil Contractors</h2>
-            </section>
 
-            <p>You're building the future. We're here to help</p>
+            <div class="pilot">
+                <section>
+                    <img src="./images/eze profile-1.png" alt="">
+                    <h1>METZ ENGINEERING <br> CO.LIMITED</h1>
+                    <h2>Building & Civil Contractors</h2>
+                </section>
+
+                <p>You're building the future. We're here to help</p>
+            </div>
         </banner>
 
         <article>
