--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
                     <h2>Building & Civil Contractors</h2>
                 </section>
 
-                <p>You're building the future. We're here to help</p>
+                <p>You're building the future. We're here to help.</p>
             </div>
         </banner>
 
