about page update, no style yet

--- a/about.html
+++ b/about.html
@@ -28,9 +28,212 @@
     </header>
 
     <main>
-        
-    </main>
 
+        <section>
+            <h2>Company Particulars and Legal Status</h2>
+
+            <table>
+                <thead>
+                    <tr>
+                        <th></th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Name of Company</td>
+                        <td>METZ ENGINEERING
+                            LIMITED
+                            COMPANY</td>
+                    </tr>
+                    <tr>
+                        <td>Date of company incorporation</td>
+                        <td>20th June 2019</td>
+                    </tr>
+                    <tr>
+                        <td>Number of Certificate of incorporation</td>
+                        <td>139-352-262</td>
+                    </tr>
+                    <tr>
+                        <td>Place of incorporation</td>
+                        <td>Dar es Salaam, Tanzania</td>
+                    </tr>
+                    <tr>
+                        <td>Office Address</td>
+                        <td>Gongo la Mboto - Stakishari (Near
+                            Stakishari Police Station)</td>
+                    </tr>
+                    <tr>
+                        <td>Postal Address</td>
+                        <td>P.O Box 71003, Dar es Salaam</td>
+                    </tr>
+                    <tr>
+                        <td>Taxpayer Identification Number (TIN)</td>
+                        <td>139-352-262</td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <article>
+                <h3>Legal Status</h3>
+                <p>The following copies of legal status documents are enclosed herein:</p>
+                <ul class="status">
+                    <li>Certificate of Incorporation</li>
+                    <li>Business License for Civil Works Contractor Class 6</li>
+                    <li>Business License for Building Contractor Class 6</li>
+                    <li>Taxpayer Identification Number (TIN)</li>
+                    <li>VAT Registration Number (VRN)</li>
+                    <li>Certificate of Registration as Civil Engineering Contractor Class 6</li>
+                    <li>Certificate of Registration as Building Contractor Class 6</li>
+                </ul>
+            </article>
+
+        </section>
+
+        <section>
+            <h2>Board of Directors</h2>
+
+            <div>
+                <img src="./images/ceo.jpg" alt="ceo">
+                <h4>Mtambalike Shinga Mtambalike</h4>
+                <h3>Managing Director</h3>
+                <p>Mtambalike S. Mtambalike is the Managing Director and
+                    shareholder of the Company. He has been associated with the
+                    Company since its incorporation. He has executed varied
+                    projects and has 20 years of experience of working in the
+                    construction industry. His leadership skills have enabled the
+                    company to execute complex projects successfully</p>
+            </div>
+
+            <div>
+                <img src="./images/ceo.jpg" alt="mceo">
+                <h4>Qs. Ezekiel Wilson Peter</h4>
+                <h3>Technical Director</h3>
+                <p>Qs. Ezekiel Wilson is the Technical Director and Shareholder
+                    of the company. He has been associated with the company
+                    since its incorporation He is Young and dynamic; Drives the
+                    Construction & Real Estate Business Development. With
+                    passion for design, cost estimating, construction supervision,
+                    he is deeply involved in various construction activities. He has
+                    completed his University Degree (Bachelor of Science in
+                    Building Economics) from Ardhi University. Qs. Ezekiel
+                    Wilson has been registered by Architects and Quantity
+                    Surveyors Registration Board (AQRB) and also a member of
+                    Tanzania institute of Quantity Surveyors (TIQS).With his
+                    Experience in Construction Industry, proficiency of the
+                    industry and headship knacks the company targets to
+                    accomplish new altitudes in the construction industry.</p>
+            </div>
+        </section>
+
+        <section>
+            <h2>Executive Management Team & Personnel</h2>
+
+            <table>
+                <thead>
+                    <tr>
+                        <th>S/N</th>
+                        <th>DESCRIPTION</th>
+                        <th>NAME</th>
+                        <th>QUALIFICATION</th>
+                        <th>EXPERIENCE</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1.</td>
+                        <td>Finance Manager</td>
+                        <td>Queen Moccah</td>
+                        <td>Tax Administration</td>
+                        <td>9Yrs</td>
+                    </tr>
+                    <tr>
+                        <td>2.</td>
+                        <td>Marketing Manager</td>
+                        <td>Sadru Musiba</td>
+                        <td>Bachelor Degree in
+                            Marketing</td>
+                        <td>12Yrs</td>
+                    </tr>
+                    <tr>
+                        <td>3.</td>
+                        <td>Legal Advisor/Human
+                            Resource Mange</td>
+                        <td>Juliana Changarawe</td>
+                        <td>Bachelor of Law</td>
+                        <td>15Yrs</td>
+                    </tr>
+                    <tr>
+                        <td>4.</td>
+                        <td>Sites/General Manager</td>
+                        <td>Respicius S.
+                            Kabyemela</td>
+                        <td>FTC. Civil Engineer</td>
+                        <td>20yrs</td>
+                    </tr>
+                    <tr>
+                        <td>5.</td>
+                        <td>Engineer</td>
+                        <td>Twahil Abdallah</td>
+                        <td>Civil and Water
+                            Resources Engineer</td>
+                        <td>5yrs</td>
+                    </tr>
+                    <tr>
+                        <td>6.</td>
+                        <td>Engineer</td>
+                        <td>Victor Marko
+                            Pallagyo</td>
+                        <td>Civil Engineer</td>
+                        <td>3yrs</td>
+                    </tr>
+                    <tr>
+                        <td>7.</td>
+                        <td>Engineer</td>
+                        <td>Victor Marko
+                            Pallagyo</td>
+                        <td></td>
+                        <td>30yrs</td>
+                    </tr>
+                    <tr>
+                        <td>8.</td>
+                        <td>Secretary</td>
+                        <td>Mary Joseph
+                            Muronko</td>
+                        <td>Records
+                            Management</td>
+                        <td>3yrs</td>
+                    </tr>
+                    <tr>
+                        <td>9.</td>
+                        <td>Quantity surveyor</td>
+                        <td>Irene Andrew
+                            Mnyeke</td>
+                        <td></td>
+                        <td>7yrs</td>
+                    </tr>
+                    <tr>
+                        <td>10.</td>
+                        <td>Construction Safety and
+                            Health Management
+                            Officer</td>
+                        <td>Wily B.M.Machumu</td>
+                        <td>FTC. Civil Engineer</td>
+                        <td>25yrs</td>
+                    </tr>
+                </tbody>
+            </table>
+
+        </section>
+
+        <article>
+            <h3>Associate Staff</h3>
+            <p>METZ ENGINEERING COMPANY LIMITED has a healthy working relationship with a
+                number of highly qualified individual personnel who can be available for execution of assignments
+                contracted to the company on a “fee-for-service” base.</p>
+        </article>
+
+    </main>
 
     <footer>
         <div>
