about style updated

--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
             <h2>Board of Directors</h2>
 
             <div>
-                <img src="./images/ceo.jpg" alt="ceo">
+                <img src="./images/ceo.png" alt="ceo">
                 <h4>Mtambalike Shinga Mtambalike</h4>
                 <h3>Managing Director</h3>
                 <p>Mtambalike S. Mtambalike is the Managing Director and
@@ -106,7 +106,7 @@
             </div>
 
             <div>
-                <img src="./images/ceo.jpg" alt="mceo">
+                <img src="./images/mceo.png" alt="mceo">
                 <h4>Qs. Ezekiel Wilson Peter</h4>
                 <h3>Technical Director</h3>
                 <p>Qs. Ezekiel Wilson is the Technical Director and Shareholder
