--- a/projects.html
+++ b/projects.html
@@ -28,9 +28,72 @@
     </header>
 
     <main>
-        
-    </main>
+        <h2>Our Projects</h2>
 
+        <article>
+            <div>
+                <img src="./images/Projects/p1/pr1.png" alt="">
+                <img src="./images/Projects/p1/pr2.png" alt="">
+            </div>
+            <h3>Construction of Residential House Built on Plot N0. 10 Block "G" at Kihonda, Morogoro</h3>
+        </article>
+
+        <article>
+            <div>
+                <img src="./images/Projects/p2/pr1.png" alt=""><img src="./images/Projects/p2/pr2.png" alt=""><img
+                    src="./images/Projects/p2/pr3.png" alt=""><img src="./images/Projects/p2/pr4.png" alt=""><img
+                    src="./images/Projects/p2/pr5.png" alt=""><img src="./images/Projects/p2/pr6.png" alt=""><img
+                    src="./images/Projects/p2/pr7.png" alt="">
+            </div>
+            <h3>Construction of Residential Apartment Built on Plot N0. 978 Block „B‟ at Mbezi Beach
+                Area, Kinondoni Municipality Dar es Salaam</h3>
+
+        </article>
+
+        <article>
+            <div>
+                <img src="./images/Projects/p3/pr1.png" alt="">
+                <img src="./images/Projects/p3/pr2.png" alt="">
+            </div>
+            <h3>Construction Of Affordable Housing Scheme Phase III At Mtoni Kijichi In Temeke
+                Municipality-Lot11 -Dar Es Salaam Sub-contracted landscaping+ Finishing + Paint and
+                decoration. Contract Price TZS. 218Million</h3>
+        </article>
+
+        <article>
+            <div>
+                <img src="./images/Projects/p4/pr1.png" alt="">
+                <img src="./images/Projects/p4/pr2.png" alt="">
+            </div>
+            <h3>PERIODIC MAINTENANCE- WAILES ROAD, which is situated in Lindi Municipal
+                Council. Double Surface dressing It covers 2Km as a whole. Tzs 350Million</h3>
+        </article>
+
+        <article>
+            <div>
+                <img src="./images/Projects/p5/pr1.png" alt="">
+                <img src="./images/Projects/p5/pr2.png" alt="">
+                <img src="./images/Projects/p5/pr3.png" alt="">
+                <img src="./images/Projects/p5/pr4.png" alt="">
+            </div>
+            <h3>Construction of Residential Apartment built on Plot N0. 45 Block „J ‟ at Mbezi Beach Area,
+                Kinondoni Municipality Dar es Salaam</h3>
+        </article>
+
+        <article>
+            <div>
+                <img src="./images/Projects/p6/pr1.png" alt="">
+                <img src="./images/Projects/p6/pr2.png" alt="">
+                <img src="./images/Projects/p6/pr3.png" alt="">
+                <img src="./images/Projects/p6/pr4.png" alt="">
+                <img src="./images/Projects/p6/pr5.png" alt="">
+                <img src="./images/Projects/p6/pr6.png" alt="">
+            </div>
+            <h3>Construction of Residential House Built on Plot N0. 219 Block "15" at Kibada in Temeke
+                Municipality Dar es Salaam</h3>
+        </article>
+
+    </main>
 
     <footer>
         <div>
