--- a/home.html
+++ b/home.html
@@ -113,8 +113,8 @@
     <footer>
         <div>
             <h2>CONTACT US</h2>
-            <p>Plot No. 1, Block No. 1, <br> Mtoni Kijichi, Temeke, Dar es Salaam, <br> Tanzania</p>
-            <p>Phone: +255 713 000 000 <br> Email: metz_engineering@yahoo.com
+            <p>P.O BOX 71003 <br> Gongo la Mboto - Stakishari, Dar es Salaam, <br> Tanzania</p>
+            <p>Phone: Phone: +255-765184245 /+255-754567065 <br> Email: metz_engineering@yahoo.com
         </div>
     </footer>
 
