updated the style for various divices

--- a/home.html
+++ b/home.html
@@ -59,8 +59,10 @@
                 public activities.</p>
         </article>
 
-        <section id="ourprojects">
-            <h2>Our Projects</h2>
+        <h2>Our Projects</h2>
+
+        <section class="projects">
+
             <div class="card">
                 <img src="./images/Projects/pr1.jpg" alt="" class="card-image">
                 <div class="card-description">
@@ -80,6 +82,7 @@
                         TZS. 218Million</p>
                 </div>
             </div>
+
             <div class="card">
                 <img src="./images/Projects/pr3.png" alt="" class="card-image">
                 <div class="card-description">
