--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
         <section>
             <h2>Company Particulars and Legal Status</h2>
 
-            <table>
+            <table class="particulars">
                 <thead>
                     <tr>
                         <th></th>
