--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-
+    <!-- Header and Links -->
     <header>
         <div class="logo">
             <img src="./images/logo.png" alt="logo">
@@ -26,7 +26,7 @@
             </ul>
         </nav>
     </header>
-
+    <!-- Main Content -->
     <main>
 
         <banner>
