--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
 <body>
 
     <header>
+        <div class="header">
         <div class="logo">
             <img src="./images/logo.png" alt="logo">
         </div>
@@ -25,6 +26,7 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
+    </div>
     </header>
 
     <main>
